force-app/main/default/objects/Incident__c/Incident__c.object-meta.xml
<CustomObject>
    <label>Incident</label>
    <pluralLabel>Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <displayFormat>INC-{00000}</displayFormat>
        <label>Incident Number</label>
        <type>AutoNumber</type>
    </nameField>
</CustomObject>