force-app/main/default/objects/Incident__c/fields/Current_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Current_Temperature__c</fullName>
    <description>Stores the real-time temperature at the incident location at the time of creation, fetched via the Open-Meteo API.</description>
    <label>Current Temperature</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>