force-app/main/default/objects/Incident__c/fields/Escalation_Count__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Count__c</fullName>
    <label>Escalation Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>