force-app/main/default/objects/Incident__c/fields/Location_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Location_Latitude__c</fullName>
    <description>The latitude coordinate of the reported incident location.</description>
    <label>Location Latitude</label>
    <precision>10</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>