force-app/main/default/objects/Incident__c/fields/Location_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Location_Longitude__c</fullName>
    <description>The longitude coordinate of the reported incident location.</description>
    <label>Location Longitude</label>
    <precision>11</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>