force-app/main/default/objects/Incident__c/fields/Location_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Location_Zip_Code__c</fullName>
    <label>Location Zip Code</label>
    <type>Text</type>
    <length>10</length>
    <required>true</required>
</CustomField>