force-app/main/default/objects/Incident__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <formula>CASE(TEXT(Incident_Type__c), 
        &quot;Water Leak&quot;, &quot;High&quot;, 
        &quot;Pothole&quot;, &quot;Medium&quot;, 
        &quot;Broken Streetlight&quot;, &quot;Low&quot;, 
        &quot;Graffiti&quot;, &quot;Low&quot;, 
        &quot;Medium&quot;
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority</label>
    <type>Text</type>
</CustomField>