force-app/main/default/objects/Incident__c/fields/Resolution_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Photo_URL__c</fullName>
    <label>Resolution Photo URL</label>
    <type>Url</type>
</CustomField>